<resources>
    <string name="app_name">Train</string>
    <string name="error_empty_fields">Veuillez remplir tous les champs</string>
    <string name="select_depart">Lieu de départ</string>
    <string name="select_arrivee">Destination</string>
    <string name="select_depart_date">Date de départ</string>
    <string name="select_retour_date">Date de retour</string>
    <string name="rechercher">Rechercher</string>
    <string name="swap_locations">Changer les lieux</string>
    <string name="delete_return_date">Supprimer la date de retour</string>
    <string name="train_results">Résultats des trains</string>
    <string name="back_button">Retour</string>
    <string name="retour_formulaire">Retour au formulaire</string>
    <string name="field_reinitialization">Réinitialisation des champs</string>
    <string name="no_train_available">Aucun train disponible</string>
    <string name="fields_already_empty">Les champs sont vides</string>
    <string name="departure_after">Départ après</string>
    <string name="select_departure_time">Selectionnez l\'heure de départ</string>
    <string name="select_departure_date">Selectionnez la date de départ</string>
    <string name="update_researche">Modifier la recherche</string>
    <string name="apply_changes">Appliquer</string>
</resources>